# xrmc

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  INSTALL  Makefile.am  README.md  appveyor.yml  conf_valg.sh  config.sh  configure.ac  libxrmc.pc.in  valgrind.sh  warnings.txt  xrmc.spec.in
debian/: changelog  control  copyright  libxrmc0-dev.install  libxrmc0.install  rules  xrmc-xmimsim.install  xrmc.install
doc/: Makefile.am  xrmc_6.4.1_man.odt  xrmc_6.4.3_man.odt
examples/: Makefile.am
examples/Edep/: oct_plot.m  profile_C.txt  profile_C_th.txt  profile_ph.txt  profile_ph_th.txt  profile_tot.txt  script.sh
examples/Edep/Compt/: compt  compt.c
examples/Edep/qti/: Edep.qti
examples/anisotropicsource/: Makefile.am  README  intensityscreen_image.c  intensityscreen_image.py  make.sh  read_intensityscreen_image.py  xrmc.sh
examples/anisotropicsource2/: Makefile.am
examples/beamsource/: Makefile.am  README  beamscreen_image.c  make.sh
examples/cylind_shell/: Makefile.am
examples/fluor_layers/: Makefile.am  README  detector_response  detector_response.c  detector_routines.c  detector_routines.h  make.sh  oct_plot.m
examples/materials/: Makefile.am
examples/materials_tmp/: image.dat.bk
examples/phasecontrast/: Makefile.am
examples/quadrics/: Makefile.am
examples/radionuclide/: Makefile.am  run.pro
examples/star1/: Makefile.am
examples/star2/: Makefile.am
examples/wheel/: Makefile.am
examples/xmi-msim/: Makefile.am  run.pro  run.sh  stainlesssteel.xmsi
examples/xmi-msim2/: Makefile.am
examples/xrmc_hands_on/fluormap/: README.txt  oct_plot.m
examples/xrmc_hands_on/tomo/: quadric.templ  run.bat  run.sh
nsis/: License.rtf  Makefile.am  xrmc-win32.nsi.in  xrmc-win64.nsi.in  xrmc.nsi.in
src/: Makefile.am
src/arrayNd/: Makefile.am  arrayNd.cpp  xrmc_arrayNd.h
src/beamsource/: Makefile.am  anisotropicsource.cpp  anisotropicsource.h  beamscreen.cpp  beamscreen.h  beamsource.cpp  beamsource.h  intensityscreen.cpp  intensityscreen.h  loadanisotropicsource.cpp  loadbeamscreen.cpp  loadbeamsource.cpp  loadintensityscreen.cpp
src/composition/: Makefile.am  composition.cpp  loadcomposition.cpp  xrmc_composition.h
src/detector/: Makefile.am  detector.cpp  image_convolution.cpp  image_convolution.h  loaddetector.cpp  xrmc_detector.h  xrmc_loaddetector.h  xrmc_screen.cpp  xrmc_screen.h
src/detector3d/: Makefile.am  detector3d.cpp  loaddetector3d.cpp  xrmc_detector3d.h  xrmc_loaddetector3d.h
src/device/: Makefile.am  device.cpp  loadnewdevice.cpp  xrmc_device.h
src/exception/: Makefile.am  xrmc_exception.h
src/fft/: Makefile.am  alloc.h  fft.h
src/geom3d/: Makefile.am  geom3d.cpp  loadgeom3d.cpp  loadquadric.cpp  quadric.cpp  qvolume.cpp  xrmc_geom3d.h
src/gettoken/: Makefile.am  gettoken.cpp  xrmc_gettoken.h
src/main/: Makefile.am  loaddevice.cpp  loadparams.cpp  xrmc.cpp  xrmc.h  xrmc_main.cpp
src/phasecontrast/: Makefile.am  loadphcdetector.cpp  phcdetector.cpp  phcdetector.h  phcdevice.h  xrmcalgo.cpp
src/photon/: Makefile.am  photon.cpp  xrmc_fluo_lines.h  xrmc_fluo_lines.pro  xrmc_photon.h
src/radionuclide/: Makefile.am  loadradionuclide.cpp  radionuclide.cpp  xrmc_radionuclide.h
src/randmt/: Makefile.am  license.txt  randmt.c  randmt.h  readme.txt
src/sample/: Makefile.am  loadsample.cpp  sample.cpp  sample.cpp.tmp  xrmc_sample.h  xrmc_sample.h.tmp
src/source/: Makefile.am  loadsource.cpp  source.cpp  xrmc_source.h
src/spectrum/: Makefile.am  loadspectrum.cpp  spectrum.cpp  xrmc_spectrum.h
src/xmi-msim/: Makefile.am  xmimsim-detectorconvolute.cpp  xmimsim-loaddetectorconvolute.cpp  xmimsim-loadplugin.cpp  xmimsim-loadspectrumebel.cpp  xmimsim-spectrumebel.cpp  xrmc-xmimsim.c  xrmc_detectorconvolute.h  xrmc_loadxmimsim.h  xrmc_spectrum_ebel.h
src/xrmc_algo/: Makefile.am  xrmc_algo.cpp  xrmc_algo.h
src/xrmc_math/: Makefile.am  xrmc_math.cpp  xrmc_math.h
test/anisotropicsource_unforced_weighted/intensityscreen_image/: intensityscreen_image.c
test/anisotropicsource_uniform/intensityscreen_image/: intensityscreen_image.c  intensityscreen_image.c.bk
test/beamsource_cylind_shell_loop_forced/beamscreen_image/: beamscreen_image.c
test/beamsource_forced_unweighted/beamscreen_image/: beamscreen_image.c
test/beamsource_unforced_weighted/beamscreen_image/: beamscreen_image.c
test/beamsource_uniform/beamscreen_image/: beamscreen_image.c
test/convolve_file/: convoluted_image.dat.old
test/cylind_shell/: Makefile.am
test/phasecontrast_anisotropicsource/: script.sh
test/phasecontrast_anisotropicsource/beamscreen_image/: beamscreen_image.c
test/phasecontrast_beamscreen/beamscreen_image/: beamscreen_image.c
test/phasecontrast_contact/: note.txt
test/phasecontrast_convolve/: oct_plot.m
test/scatt_2nd_ord_cluster/: job.sh  job1.sh  oct_plot.m  oct_plot1.m  plot.sh  plot1.sh  run.sh  run1.sh
test/scatt_2nd_ord_cluster/extract/: extract.c
test/scatt_2nd_ord_cluster/theor_plot/: make.sh  theoretical.c
test/scatt_2nd_ord_single/: script.sh
test/thick_layer_test/: README.txt  oct_plot.m
test/thick_layer_test/theor/: make.sh  theor.c
