noinst_LTLIBRARIES = libcomposition.la

libcomposition_la_SOURCES = composition.cpp     loadcomposition.cpp xrmc_composition.h
libcomposition_la_CPPFLAGS = @xraylib_CFLAGS@ -I${srcdir}/../device/ -I${srcdir}/../xrmc_algo -I${srcdir}/../gettoken -I${srcdir}/../exception -I${srcdir}/../xrmc_math -I${srcdir}/../xrmc_algo -I${srcdir}/../randmt -I${srcdir}/../main 
