noinst_LTLIBRARIES = libgeom3d.la

libgeom3d_la_SOURCES = geom3d.cpp      loadgeom3d.cpp  loadquadric.cpp quadric.cpp     qvolume.cpp     xrmc_geom3d.h
libgeom3d_la_CPPFLAGS = -I${srcdir}/../xrmc_math -I${srcdir}/../xrmc_algo -I${srcdir}/../arrayNd -I${srcdir}/../device -I${srcdir}/../source -I${srcdir}/../photon -I${srcdir}/../spectrum -I${srcdir}/../composition -I${srcdir}/../exception -I${srcdir}/../main -I${srcdir}/../gettoken -I${srcdir}/../randmt
